# IPRMSOLVER

./: README.md
iprm-socp/: README.md  iprm.m  iprm_mex.cpp  iprm_mex.mexw64  lp_results_#_reg=1e-10.csv  lp_results_#_reg=1e-11.csv  lp_results_#_reg=1e-9.csv  lp_results_reg=1e-10.csv  lp_results_reg=1e-12.csv  make_iprm.m  ptime.m  run_iprm_lp.m  run_scale_maros.m  run_scale_maros_debug.m  scale_maros_results_#_reg=1e-10.csv  scale_maros_results_#_reg=1e-11.csv  scale_maros_results_#_reg=1e-12.csv  scale_maros_results_#_reg=1e-13_去除右下角两块静态正则化.csv  scale_maros_results_#_reg=1e-14.csv  scale_maros_results_#_reg=1e-8.csv  scale_maros_results_reg=1e-12.csv  scale_maros_results_reg=1e-13.csv  time.txt
iprm-socp-2/: dimacs_results_0.csv  iprm.m  iprm_mex.asv  iprm_mex.cpp  iprm_mex.mexw64  lp_results_0.csv  run_dimacs.m  run_dimacs_debug.m  run_iprm_lp.m  run_scale_dimacs.m  run_scale_dimacs_debug.m  run_scale_maros.m  run_scale_maros_debug.m  scale_dimacs_results_0.csv  scale_maros_results_0.csv
iprm-socp-2/dimacs-sedumi/: nql60.mat  qssp30.mat  qssp60.mat
iprm-socp-2/iprm/: CMakeLists.txt
iprm-socp-2/iprm/examples/: iprm_demo.c
iprm-socp-2/iprm/include/: cone.h  definitions.h  iprm.h  iprm_api.h  kkt.h  structs.h
iprm-socp-2/iprm/lib/qdldl/: CMakeLists.txt
iprm-socp-2/iprm/src/: cone.c  iprm_api.c  kkt.c  timer_linux.c  utils.c
iprm-socp-2/iprm/tests/simple_tests/: missing_constraints_test.cpp
iprm-socp-2/netlib/: lp_agg2.mat  lp_e226.mat  lp_scsd8.mat
iprm-socp/iprm/examples/: demo_socp.c
iprm-socp/iprm/include/: enums.h  input_validation.h  iprm_error.h  utils.h
iprm-socp/netlib/: lp_bore3d.mat  lp_d2q06c.mat  lp_ganges.mat  lp_pilot_we.mat  lp_sctap3.mat
iprm-test/: iprm_mex.mexw64  run_maros_iprm.m
iprm-test-0-2x2-sparse/: delete.txt  iprm_mex.mexw64  lp_results_0.csv  lp_results_2x2.csv  lp_results_2x2.xlsx  maros_results.csv  maros_results_0.csv  run_iprm_lp.m  run_maros_debug.m  run_maros_iprm.m  run_scale_maros_debug.m  scale_maros_results_2x2_sparse.csv
iprm-test-0-2x2-sparse/netlib/: lp_agg.mat  lp_cycle.mat  lp_czprob.mat
iprm-test-0-2x2-sparse/qoco/tests/: CMakeLists.txt
iprm-test-2/: Convertmodel2.m  iprm.m  iprm_mex.hpp  iprm_mex.mexw64  lp_results.xlsx  lp_results_3x3.csv  lp_results_3x3.xlsx  lp_results_3x3_epsilon=1e-12.csv  lp_results_3x3_epsilon=1e-12.xlsx  lp_results_3x3_matlab_param.csv  maros_results.csv  maros_results_1.csv  maros_results_2.csv  maros_results_3.csv  qoco.csv  run_iprm_debug.m  run_iprm_lp.m  run_iprm_tests.m  run_maros_debug.asv  run_maros_debug.m  run_maros_iprm.m  run_scale_maros.m  run_scale_maros_debug.m  scale_maros_results.csv  scale_maros_results_0.csv  scale_maros_results_1.csv  scale_maros_results_3x3.csv  scale_maros_results_3x3_iprmstop.csv  scale_maros_results_3x3_qocostop_epsilon=1e-10.csv  scale_maros_results_3x3_qocostop_epsilon=1e-7.csv  scale_maros_results_3x3_qocostop_epsilon=1e-8.csv  scale_maros_results_3x3_sorted.xlsx  scale_maros_results_linesearch=10_delta=0.4.csv  scale_maros_results_linesearch=10_delta=0.5.csv  scale_maros_results_linesearch=7_delta=0.3.csv  time-example.txt  time-lp-iprm-lp-qoco.txt  time-sm-iprm-m-qoco.txt  time-sm-iprm-sm-qoco-1.txt  time-sm-iprm-sm-qoco.txt  (+1 more)
iprm-test-2-clear/: README.md  iprm.m  iprm_mex.cpp  iprm_mex.hpp  iprm_mex.mexw64  lp_results.csv  run_iprm_lp.m  scale_maros_results.csv  time-lp-iprm-qoco.txt  time-scale_maros-iprm-qoco.txt
iprm-test-2-clear/iprm/: CMakeLists.txt
iprm-test-2-clear/netlib/: lp_bandm.mat  lp_bnl1.mat  lp_bnl2.mat  lp_boeing1.mat  lp_brandy.mat  lp_capri.mat  lp_d6cube.mat  lp_degen2.mat  lp_dfl001.mat  lp_etamacro.mat  lp_fffff800.mat  lp_fit1d.mat  lp_fit1p.mat  lp_fit2d.mat  lp_fit2p.mat  lp_forplan.mat  lp_greenbea.mat  lp_greenbeb.mat  lp_grow22.mat  lp_grow7.mat  lp_lotfi.mat  lp_maros.mat  lp_maros_r7.mat  lp_perold.mat  lp_pilot.mat  lp_pilot4.mat  lp_pilot87.mat  lp_pilotnov.mat  lp_recipe.mat  lp_sc205.mat  lp_scfxm2.mat  lp_scfxm3.mat  lp_scorpion.mat  lp_scrs8.mat  lp_sctap1.mat  lp_seba.mat  lp_share1b.mat  lp_shell.mat  lp_ship04l.mat  lp_ship12s.mat  (+7 more)
iprm-test-2/netlib/: lp_finnis.mat  lp_scfxm1.mat  lp_ship08s.mat  lp_standata.mat
iprm-test-2/qoco/: .clang-format  .gitignore  CMakeLists.txt  compile_commands.json
iprm-test-2/qoco/examples/: iprm_demo.c
iprm-test-2/qoco/include/: cone.h  enums.h  input_validation.h  structs.h  utils.h
iprm-test-2/qoco/lib/amd/: CMakeLists.txt  cmake_install.cmake
iprm-test-2/qoco/lib/qdldl/: Makefile
iprm-test-2/qoco/src/: cone.c  kkt.c  qoco_api.c  utils.c
iprm-test-2/qoco/tests/ocp/: generate_problem_data.py  lcvx_test.cpp  pdg_test.cpp
iprm-test-2/qoco/tests/simple_tests/: missing_constraints_test.cpp
iprm-test-2/qoco/tests/utils/: codegen_functions.py  test_utils.h
iprm-test-2/tests_iprm/: lp_test.m  no_constraints.m  no_ineq_constraints.m  no_soc_constraints.m
iprm-test/qoco/: README.md
qoco-iprm-matlab-clear/: .gitignore  make_iprm.m
qoco-iprm-matlab-clear/qoco/: Makefile
qoco-iprm-matlab-clear/tests_iprm/: no_soc_constraints.m
qoco-iprm-test/: .gitmodules  README.md  iprm_mex.cpp  iprm_mex.mexw64  maros.7z  maros_results-2.csv  maros_results-2.xlsx  maros_results-compare.xlsx  qoco.csv  qoco_lp_results.csv  qoco_mex.cpp  qoco_mex.mexw64  run_maros_qoco.m  run_qoco_lp.m  run_qoco_tests.m  scale_maros_qoco_results_0.csv  utils.py
qoco-iprm-test/netlib/: lp_agg3.mat  lp_boeing2.mat  lp_grow15.mat  lp_modszk1.mat  lp_nesm.mat
qoco-iprm-test/qoco/: CMakeLists.txt  cmake_install.cmake
qoco-iprm-test/tests/: TAME.m  lp_test.m  no_constraints.m  no_eq_constraints.m  no_ineq_constraints.m  no_soc_constraints.m  simple_socp_test_1.m  simple_socp_test_2.m  simple_socp_test_3.m
qoco-iprm-test/tests_iprm/: lp_test.m  no_constraints.m
qoco-test/: ScaleData.m  make_qoco.m  qoco.m  qoco_lp_results.csv  qoco_mex.hpp  qoco_mex.mexw64  run_qoco_lp.m  run_scale_maros_qoco.m  scale_maros_qoco_results.csv
qoco-test/netlib/: lp_beaconfd.mat  lp_degen3.mat  lp_scagr25.mat  lp_scsd1.mat  lp_scsd6.mat
qoco-test/qoco/: CMakeLists.txt  README.md
(+98 files in other folders)
